vlib/v/checker/tests/fn_args.vv
fn uu8(a byte) {}
fn arr(a []int) {}
fn fun(a fn(int)) {}

fn basic() {
	v := 4
	uu8(&v)
	arr([5]!)
	fun(fn(i &int){})
}

struct S1 {
}
fn f(p &S1) {}

fn ptr() {
	v := 4
	f(v)
}
